2008-11-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* eword-decode.el (eword-decode-string, eword-decode-region)
	(eword-analyze-encoded-word): Express the language portion of an
	encoded word as a symbol.

	* tests/test-rfc2231.el (test-rfc2231-encoded-word-1)
	(test-rfc2231-encoded-word-2, test-rfc2231-encoded-word-3): Use
	eword-decode-string instead of eword-decode-encoded-word.

2008-09-20  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mel-q-ccl.el (mel-ccl-256-to-16-table): Accept (illegal) lower
	case representation for decoding.

2007-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* eword-encode.el (make-ew-rword, ew-rword-text, ew-rword-charset)
	(ew-rword-encoding, ew-rword-type)
	* hmac-def.el (define-hmac-function)
	* md4.el (md4-make-step)
	* sha1-el.el (sha1-F0, sha1-F1, sha1-F2, sha1-F3, sha1-S1)
	(sha1-S5, sha1-S30, sha1-OP, sha1-add-to-H)
	* hex-util.el (hex-char-to-num, num-to-hex-char): Revert last changes.

2007-09-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* eword-encode.el (make-ew-rword, ew-rword-text, ew-rword-charset)
	(ew-rword-encoding, ew-rword-type): Use new-style backquotes.

	* hmac-def.el (define-hmac-function): Use new-style backquotes.

	* md4.el (md4-make-step): Use new-style backquotes.

2007-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sha1-el.el: Fix up comment style.
	(sha1-F0, sha1-F1, sha1-F2, sha1-F3, sha1-S1, sha1-S5, sha1-S30)
	(sha1-OP, sha1-add-to-H): Use new-style backquotes.

	* hex-util.el: Fix up comment style.
	(hex-char-to-num, num-to-hex-char): Use new-style backquotes.

2007-06-18  Wencheng Fang  <wencheng.fang@spherenet.co.jp>

	* mel.el (mime-write-decoded-region): Define method function that
	uses built-in base64-decode-region.  [cf. <emacs-mime-ja:02169>]

2006-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Installation): Update required version of
	APEL to 10.7 or later.

	* FLIM-CFG (PACKAGEDIR): Use
	`install-get-default-package-directory'.
